commented out genre

--- a/JamSesh/assets/css/admin.css
+++ b/JamSesh/assets/css/admin.css
@@ -44,6 +44,10 @@ body::-webkit-scrollbar-thumb {
   padding-right: 15%;
 }
 
+.del {
+  color: #c52222;
+}
+
 .sub h3, .tb h3 {
   font-weight: bold;
   color: rgb(63, 63, 63);
