--- a/JamSesh/assets/css/Search.css
+++ b/JamSesh/assets/css/Search.css
@@ -14,6 +14,13 @@
 .searchBar { 
     text-indent: 30px; 
     border-radius: 16px;
+    transition: all .2s;
+
+}
+
+.searchBar:hover {
+    transition: all .2s;
+    box-shadow: 0 1px 1px 0 rgba(0,0,0,0.14), 0 2px 1px -1px rgba(0,0,0,0.12), 0 1px 3px 0 rgba(0,0,0,0.20);  ;
 }
 
 .fa-search { 
