--- a/JamSesh/assets/css/Homepage.css
+++ b/JamSesh/assets/css/Homepage.css
@@ -2,10 +2,19 @@
    height: 500px;
 }
 
+.content-container {
+  display: flex;
+  justify-content: space-evenly;
+}
+
 .description {
-  width: 500px;
-  padding-left: 180px;
+  /* width: 500px; */
+  /* padding-left: 180px; */
+  margin: 50px;
   padding-top: 30px;
+  padding-left: 50px;
+  flex: 1 0;
+
 }
 
 #builtForMusicians {
@@ -21,12 +30,16 @@
 }
 
 .form-container {
-  padding: 30px;
-  margin-right: 410px;
-  margin-left: 120px;
+  flex: 1 0;
+  border-radius: 16px;
+  margin: 10px 60px 10px 60px;
+  padding-left: 60px;
+  padding-right: 60px;
+  padding-top: 30px;
+  /* margin-left: 120px; */
   background: #222222;
   height: 350px;
-  padding-top: 20px;
+  /* padding-top: 20px; */
 }
 
 #signupForm {
