--- a/JamSesh/assets/css/Studio.css
+++ b/JamSesh/assets/css/Studio.css
@@ -17,7 +17,8 @@
 }
 
 .nav-tabs {
-    /* border-bottom: 1px solid #343a40; */
+    border: none !important;
+    /* border-bottom: 1px solid rgb(58,175,169); */
     padding: 5px 5px 0px 5px;
 }
 
@@ -27,7 +28,6 @@
 }
 
 th {
-    border-radius: 10px;
     border-top: none !important;
     padding-left: 2em !important;
 }
@@ -45,30 +45,55 @@ th {
     border-radius: 10px;
 }
 
+.tabs {
+    border: none;
+}
+
+.nav-tabs {
+    overflow-y: hidden;
+    /* padding: 0 10px 10px 10px; */
+    box-shadow: 0 4px 5px 0 rgba(0,0,0,0.14), 0 1px 1px 0 rgba(0,0,0,0.12);
+}
+
 .nav-tabs .nav-link {
-    /* border-color: #343a40 !important; */
-    /* background-color: rgb(58,175,169); */
     color: black;
-    transition: all .8 ease;
-}
-
-.nav-tabs .nav-link:hover {
-    color: white;
-    transition: all .8 ease;
-    background-color: rgb(58,175,169);
-}
-
-
-.tabs:active {
-    background-color: rgb(58,175,169);
-    color: black;
+    text-decoration: none;
+    border: none;
+    padding: 5px 25px;
+    position: relative;
+    padding-bottom: 10px;
 }
 
 .nav-tabs .nav-item .active {
-    color: white;
-    /* transition: all .8 ease; */
-    background-color: rgb(58,175,169);
+    color: rgb(58,175,169);
+    border: none;
+    border-bottom: 4px solid rgb(58,175,169);
+    font-weight: bold;
+    line-height: 20px;
 }
+
+.nav-tabs .nav-link:not(.active):before {
+    content: "";
+    border: none;
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    bottom: 0;
+    left: 0;
+    color: #4e4b4e;
+    background-color: rgb(58,175,169);
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s;
+}
+
+.nav-tabs:not(.active) .nav-link:hover:before {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+  }
 
 
 #studio-composition tr:hover {
